# micromlgen

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: try_micromlgen.py
micromlgen/: decisiontreeclassifier.py  decisiontreeregressor.py  extratreesclassifier.py  gaussiannb.py  linear_regression.py  logisticregression.py  micromlgen.py  pca.py  platforms.py  principalfft.py  randomforestclassifier.py  randomforestregressor.py  rvm.py  sefr.py  svm.py  utils.py  wifiindoorpositioning.py  xgboost.py
micromlgen/templates/: _skeleton.jinja
